bmesh.utils.loop_separate() and bmesh.utils.face_vert_separate() always return None #41788

Closed
opened 2014-09-11 13:54:27 +02:00 by Michał Pilch · 6 comments

System Information
Debian Linux Unstable (Sid 09.2014), Radeon HD 6570

Blender Version
Broken: 2.71, 9337574

Short description of error
bmesh.utils.loop_separate() and bmesh.utils.face_vert_separate() always return None

Exact steps for others to reproduce the error
Just run one of these functions from console. It takes affects on mesh but always returns None not a new vertice as it is described in documentation.

**System Information** Debian Linux Unstable (Sid 09.2014), Radeon HD 6570 **Blender Version** Broken: 2.71, 9337574 **Short description of error** bmesh.utils.loop_separate() and bmesh.utils.face_vert_separate() always return None **Exact steps for others to reproduce the error** Just run one of these functions from console. It takes affects on mesh but always returns None not a new vertice as it is described in documentation.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Pilchu

Added subscriber: @Pilchu
Campbell Barton was assigned by Sergey Sharybin 2014-09-11 15:40:58 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 26e476b7e1

This issue was referenced by 26e476b7e13b6e7c6c4b1ce017e00fb3c9cc9de5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 26e476b7e1.

Closed by commit 26e476b7e1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41788
No description provided.