Fix T41788: bmesh.utils.loop_separate, face_vert_separate() always return None